tests/compile-fail/m4-call-004-async-exclusive-parameter.to
fn invalid() {
    let operation = async (value: mut Int) {
        value += 1
    }
    _ = operation
}
